--- a/05_projects/.vscode/launch.json
+++ b/05_projects/.vscode/launch.json
@@ -11,7 +11,7 @@
             "preLaunchTask": "build",
             "program": "${workspaceFolder}/05_projects/BlazorInterAutoProj/bin/Debug/net8.0/BlazorInterAutoProj.dll",
             "args": [],
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/05_projects/BlazorInterAutoProj/bin/Debug/net8.0",
             "stopAtEntry": false,
             "serverReadyAction": {
                 "action": "openExternally",
