--- a/03_projects/SharpConfig/SharpConfigProg/Directory.Build.props
+++ b/03_projects/SharpConfig/SharpConfigProg/Directory.Build.props
@@ -8,8 +8,8 @@
 
 <Project>
   <PropertyGroup>
-    <MSBUildProjectExtensionsPath>$(MSBuildProjectDirectory)/../../Binaries/$(MSBuildProjectName)/obj</MSBUildProjectExtensionsPath>
-    <BaseOutputPath>$(MSBuildProjectDirectory)/../../Binaries/$(MSBuildProjectName)/bin</BaseOutputPath>
-    <BaseIntermediateOutputPath>$(MSBuildProjectDirectory)/../../Binaries/$(MSBuildProjectName)/int</BaseIntermediateOutputPath>
+    <MSBUildProjectExtensionsPath>$(MSBuildProjectDirectory)/../../../Binaries/$(MSBuildProjectName)/obj</MSBUildProjectExtensionsPath>
+    <BaseOutputPath>$(MSBuildProjectDirectory)/../../../Binaries/$(MSBuildProjectName)/bin</BaseOutputPath>
+    <BaseIntermediateOutputPath>$(MSBuildProjectDirectory)/../../../Binaries/$(MSBuildProjectName)/int</BaseIntermediateOutputPath>
   </PropertyGroup>
 </Project>
