--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build; BlazorInterAutoProj",
-            "program": "${workspaceFolder}/05_projects/BlazorInterAutoProj/bin/Debug/net8.0/BlazorInterAutoProj.dll",
+            //"program": "${workspaceFolder}/05_projects/BlazorInterAutoProj/bin/Debug/net8.0/BlazorInterAutoProj.dll",
+            "program": "${workspaceFolder}/Binaries/BlazorInterAutoProj/bin/Debug/net8.0/BlazorInterAutoProj.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
