--- a/05_projects/BlazorInterAutoProj/Directory.Build.props
+++ b/05_projects/BlazorInterAutoProj/Directory.Build.props
@@ -1,7 +1,7 @@
 <Project>
   <PropertyGroup>
-    <MSBUildProjectExtensionsPath>$(MSBuildProjectDirectory)/../../../Binaries/$(MSBuildProjectName)/obj</MSBUildProjectExtensionsPath>
-    <BaseOutputPath>$(MSBuildProjectDirectory)/../../../Binaries/$(MSBuildProjectName)/bin</BaseOutputPath>
-    <BaseIntermediateOutputPath>$(MSBuildProjectDirectory)/../../../Binaries/$(MSBuildProjectName)/int</BaseIntermediateOutputPath>
+    <MSBUildProjectExtensionsPath>$(MSBuildProjectDirectory)/../../Binaries/$(MSBuildProjectName)/obj</MSBUildProjectExtensionsPath>
+    <BaseOutputPath>$(MSBuildProjectDirectory)/../../Binaries/$(MSBuildProjectName)/bin</BaseOutputPath>
+    <BaseIntermediateOutputPath>$(MSBuildProjectDirectory)/../../Binaries/$(MSBuildProjectName)/int</BaseIntermediateOutputPath>
   </PropertyGroup>
 </Project>
