--- a/03_projects/SharpButtonActions/SharpButtonActionsProg/SharpButtonActionsProg.csproj
+++ b/03_projects/SharpButtonActions/SharpButtonActionsProg/SharpButtonActionsProg.csproj
@@ -12,12 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="OsaScripts\OpenFolder.scpt">
-    </EmbeddedResource>
-    <EmbeddedResource Include="OsaScripts\OpenFile.scpt">
-    </EmbeddedResource>
-    <EmbeddedResource Include="OsaScripts\OpenFile2.scpt">
-    </EmbeddedResource>
+    <EmbeddedResource Include="OsaScripts\OpenFolder.scpt"></EmbeddedResource>
+    <EmbeddedResource Include="OsaScripts\OpenFile.scpt"></EmbeddedResource>
+    <EmbeddedResource Include="OsaScripts\OpenFile2.scpt"></EmbeddedResource>
+    <EmbeddedResource Include="OsaScripts\OpenFile3.scpt"></EmbeddedResource>
+    <EmbeddedResource Include="OsaScripts\OpenFile4.scpt"></EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
