--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@
 AAPrivate
 Binaries
 **/paths.cfg
-23_Projects
-24_Projects
+22_projects
+23_projects
+24_projects
 publish_new
 ####################
 
