--- a/05_projects/BlazorInterAutoProj/BlazorInterAutoProj.csproj
+++ b/05_projects/BlazorInterAutoProj/BlazorInterAutoProj.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.2" />
     <ProjectReference Include="..\..\03_projects\SharpFileService\SharpFileServiceProg\SharpFileServiceProg.csproj" />
     <ProjectReference Include="..\..\03_projects\SharpRepoBackend\SharpRepoBackendProg2\SharpRepoBackendProg2.csproj" />
     <ProjectReference Include="..\..\03_projects\SharpRepoService\SharpRepoServiceProg\SharpRepoServiceProg.csproj" />
-    <ProjectReference Include="..\..\23_projects\SharpSetup21\SharpSetupProg21Private\SharpSetupProg21Private.csproj" />
+    <ProjectReference Include="..\..\22_projects\SharpSetup21ProgPrivate\SharpSetup21ProgPrivate.csproj" />
     <ProjectReference Include="..\BlazorInterAutoProj.Client\BlazorInterAutoProj.Client.csproj" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
