--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -35,23 +35,11 @@
             "console": "internalConsole"
         },
         {
-            "name": "run; SharpCryptoCalcProg; 6.0",
+            "name": "run; SharpCryptoCalcProg",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build; SharpCryptoCalcProg; 6.0",
+            "preLaunchTask": "build; SharpCryptoCalcProg",
             "program": "${workspaceFolder}/Binaries/SharpCryptoCalcProg/bin/Debug/net6.0/SharpCryptoCalcProg.dll",
-            "args": [],
-            "cwd": "${workspaceFolder}",
-            "stopAtEntry": false,
-            "console": "internalConsole",
-            "justMyCode": false,
-        },
-        {
-            "name": "run; SharpCryptoCalcProg; 8.0",
-            "type": "coreclr",
-            "request": "launch",
-            "preLaunchTask": "build; SharpCryptoCalcProg; 8.0",
-            "program": "${workspaceFolder}/Binaries/SharpCryptoCalcProg/bin/Debug/net8.0/SharpCryptoCalcProg.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
