--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -46,5 +46,17 @@
             "console": "internalConsole",
             "justMyCode": false,
         },
+        {
+            "name": "run; SharpImageSplitter",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build; SharpImageSplitter",
+            "program": "${workspaceFolder}/Binaries/SharpImageSplitter/bin/Debug/net6.0/SharpImageSplitter.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}",
+            "stopAtEntry": false,
+            "console": "internalConsole",
+            "justMyCode": false,
+        },
     ]
 }
