--- a/04_projects/WpfCore/WpfCoreProg/WpfCoreProg.csproj
+++ b/04_projects/WpfCore/WpfCoreProg/WpfCoreProg.csproj
@@ -13,16 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\WpfNotesSystem2\.editorconfig" Link=".editorconfig" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\SharpConfig\SharpConfigProg\SharpConfigProg.csproj" />
-    <ProjectReference Include="..\..\SharpFileService\SharpFileServiceProg\SharpFileServiceProg.csproj" />
-    <ProjectReference Include="..\..\SharpGoogleDocs\SharpGoogleDocsProg\SharpGoogleDocsProg.csproj" />
-    <ProjectReference Include="..\..\SharpGoogleDrive\SharpGoogleDriveProg\SharpGoogleDriveProg.csproj" />
-    <ProjectReference Include="..\..\SharpRepoBackend\SharpRepoBackendProg2\SharpRepoBackendProg2.csproj" />
-    <ProjectReference Include="..\..\SharpTtsService\SharpTtsServiceProg\SharpTtsServiceProg.csproj" />
+    <ProjectReference Include="..\..\..\03_projects\SharpConfig\SharpConfigProg\SharpConfigProg.csproj" />
+    <ProjectReference Include="..\..\..\03_projects\SharpFileService\SharpFileServiceProg\SharpFileServiceProg.csproj" />
+    <ProjectReference Include="..\..\..\03_projects\SharpGoogleDocs\SharpGoogleDocsProg\SharpGoogleDocsProg.csproj" />
+    <ProjectReference Include="..\..\..\03_projects\SharpGoogleDrive\SharpGoogleDriveProg\SharpGoogleDriveProg.csproj" />
+    <ProjectReference Include="..\..\..\03_projects\SharpRepoBackend\SharpRepoBackendProg2\SharpRepoBackendProg2.csproj" />
+    <ProjectReference Include="..\..\..\03_projects\SharpTtsService\SharpTtsServiceProg\SharpTtsServiceProg.csproj" />
   </ItemGroup>
 
   <ItemGroup>
