--- a/04_projects/WpfNotesSystem01/WpfNotesSystemProg01/WpfNotesSystemProg01.csproj
+++ b/04_projects/WpfNotesSystem01/WpfNotesSystemProg01/WpfNotesSystemProg01.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <StartupObject>WpfNotesSystemProg6.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\SharpContainer\SharpContainerProg\SharpContainerProg.csproj" />
+    <ProjectReference Include="..\..\..\03_projects\SharpContainer\SharpContainerProg\SharpContainerProg.csproj" />
     <ProjectReference Include="..\..\WpfCore\WpfCoreProg\WpfCoreProg.csproj" />
   </ItemGroup>
 
